5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1618_2936.log
== TEST (2019-04-02 11:06:41) 
-- CODE:
pres=float(input())
mols=float(input())
temp=float(input())
temp1=temp+273.15

resultado=(0.082*mols*temp1)pres

print(resultado)
-- ERROR:
File "XXXX", line 6
    resultado=(0.082*mols*temp1)pres
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:07) 
-- CODE:
pres=float(input())
mols=float(input())
temp=float(input())
temp1=temp+273.15

resultado=(0.082*mols*temp1)/pres

print(resultado)
-- OUTPUT:
29387.16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:07:24) 
-- CODE:
pres=float(input())
mols=float(input())
temp=float(input())
temp1=temp+273.15

resultado=(0.082*mols*temp1)/pres

print(resultado)
-- EXECUTION TIME:
0.152925
-- TEST CASE 1:
---- input:
0.01
12
25.5
---- correct output:
29387.16
---- user output:
29387.16
-- TEST CASE 2:
---- input:
0.25
2
35.5
---- correct output:
202.4744
---- user output:
202.4744
-- TEST CASE 3:
---- input:
0.28
28
288.8
---- correct output:
4607.990000000001
---- user output:
4607.990000000001
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
